unpackaged/objects/USSI_Project__c.object
<CustomObject>
    <fields>
        <fullName>USSI_Business_Area__c</fullName>
        <label>Business Area</label>
        <picklist>
            <picklistValues>
                <fullName>Business Unit IT (BU IT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Services IT (GS IT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicines Development Unit IT (MDU IT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing and Quality IT (MQ IT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Information Services (GIS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bio Medicines &amp; Oncology</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes, Manufacturing &amp; Elanco</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>GIS (GICOE, MS&amp;C, EIA)</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>LRL</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>USSI_Coach__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sr. Director/Career Coach</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Intern_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>USSI_Current_Year__c</fullName>
        <label>Current Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USSI_Degree__c</fullName>
        <label>Degree</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USSI_Project_Overview__c</fullName>
        <label>Project Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USSI_Skillset__c</fullName>
        <label>Skillset</label>
        <picklist>
            <picklistValues>
                <fullName>IT Business Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Technical Integrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Infrastructure (Network &amp; Compute)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Information Mgmt &amp; Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business (No Coding)</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>No Preference</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Technical (Coding)</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>USSI_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>USSI_Summary__c</fullName>
        <label>Summary</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USSI_Supervisor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Intern_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Intern Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>USSI_Status__c</columns>
        <columns>USSI_Skillset__c</columns>
        <columns>USSI_Supervisor_Name__c</columns>
        <columns>USSI_Current_Year__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intern Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>